fix data table top align

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ h1 {
 dl {
   /*  padding: 2px;*/
   /*  line-height: 1em;*/
+  padding-top: 70px;
 }
 dt {
   /*float: left; 
